--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,6 +4,7 @@ require Pod::Executable.execute_command('node', ['-p',
     "react-native/scripts/react_native_pods.rb",
     {paths: [process.argv[1]]},
   )', __dir__]).strip
+require_relative '../node_modules/react-native-permissions/scripts/setup'
 
 platform :ios, min_ios_version_supported
 prepare_react_native_project!
@@ -22,6 +23,12 @@ target 'GreenGarden' do
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
+
+  setup_permissions([
+    'Camera',
+    'PhotoLibrary',
+    'LocationWhenInUse'
+  ])
 
   post_install do |installer|
     react_native_post_install(
