--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.5.0",
+    "@react-native-community/geolocation": "^3.4.0",
+    "@react-native/new-app-screen": "0.82.1",
     "react": "19.1.1",
     "react-native": "0.82.1",
-    "@react-native/new-app-screen": "0.82.1",
+    "react-native-image-picker": "^7.2.3",
+    "react-native-permissions": "^5.4.4",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
